2006-12-29  Paul Eggert  <eggert@cs.ucla.edu>

	* doc/gzip.texi: Swap order of dircategory entries, to pacify
	Debian install-info 1.10.28.  This should fix
	<http://bugs.debian.org/404048>.

	* zgrep.in (version): Fix bug: $grep wasn't evaluated.

	* zgrep.in: Rewrite to make the option processing more
	compatible with GNU and POSIX grep.  Assume POSIX shell
	for more stuff, since we're already assuming that.
	* Makefile.am (check-local): Check zgrep -iV.

2006-12-26  Paul Eggert  <eggert@cs.ucla.edu>

	Fix Debian bug 367673 <http://bugs.debian.org/367673> plus several
	other bugs discovered in the neighborhood.
	* NEWS: gzip -q now exits with status 2 (not 1) on SIGPIPE.
	zgrep has many bugs fixed with argument handling, special characters,
	and exit status.
	* gzip.c (abort_gzip_signal): Implement gzip -q change.
	* zgrep.in: Implement zgrep change.

2006-12-23  Paul Eggert  <eggert@cs.ucla.edu>

	* NEWS: Fix bug reported by Martin Mares in
	<http://bugs.debian.org/177942>.
	* gzip.c (treat_stdin): Remove NO_STDIN_FSTAT and NO_PIPE_TIMESTAMP
	stuff.  It didn't work (led to syntax errors) and was confusing.
	Report an error if stdin cannot be statted even if !list && no_time.
	Get stdin's size if it is regular.
	(treat_file): Do not report an error with setuid, setgid,
	sticky, or non-regular, non-directory files if to_stdout.
	Allow 'force' to override the caution about sticky files.
	Use the same form for time stamps that treat_stdin uses.

	* zdiff.in: Fix typo that broke most usages.  Problem reported by
	Jari Aalto in <http://bugs.debian.org/404114>.  While we're at it,
	fix a bunch of other problems.  Handle "-" better.  Send
	diagnostics to stderr, not stdout.  Use expr rather than echo |
	sed, to handle special characters better.  Report a diagnostic in
	the 1-arg case, if the argument doesn't end in .gz or the like,
	rather than having incomprehensible behavior.  Do not require that
	the inputs be regular files.  Avoid creating a temporary entirely,