@@ -1,5 +1,9 @@
 2006-12-29  Paul Eggert  <eggert@cs.ucla.edu>
 
+	* zless.in: Work around a bug in less 394 and earlier; it
+	mishandles $%=~ in file names.  Problem reported by
+	Sami Liedes in <http://bugs.debian.org/383358>.
+
 	* doc/gzip.texi: Swap order of dircategory entries, to pacify
 	Debian install-info 1.10.28.  This should fix
 	<http://bugs.debian.org/404048>.
